<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">science</string>

    <!-- Error messages -->
    <string name="video_error_media_load_timeout">Media loading timed out</string>
    <string name="video_error_server_inaccessible">Media server was not reachable</string>
    <string name="video_error_unknown_error">Failed to load video</string>
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="oops">Oops</string>

    <!--客户服务电子协议-->
    <string name="pay_protocol_title">【客户服务电子协议】</string>
    <string name="pay_protocol_name_1">一、服务条款的确认和接纳\n</string>
    <string name="pay_protocol_body_1">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;本站的各项电子服务的所有权和运作权归广东广电网络。用户必须完全同意所有服务条款，才能成为本站的正式用户。本协议条款是处理双方权利义务的当然约定依据，除非违反国家强制性法律，否则始终有效。\n</string>
    <string name="pay_protocol_name_2">二、服务条款的修改\n</string>
    <string name="pay_protocol_body_2">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;广东广电网络将可能不定期的修改本用户协议的有关条款，一旦条款及服务内容产生变动，本公司将会在重要页面上提示修改内容。如果不同意本公司对条款内容所做的修改，用户可以主动取消获得的业务服务。如果用户继续使用本公司的业务服务，则视为接受服务条款的变动。广东广电网络保留随时修改或中断服务的权利。本公司行使修改或中断服务的权利，不需对用户或第三方负责。\n</string>
    <string name="pay_protocol_name_3">三、业务使用\n</string>
    <string name="pay_protocol_body_3">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;3.1 用户有权自主选择使用本公司提供的各类业务。业务一经订购,立即生效。如需停用,请致电96956咨询停用细则或到本公司的营业厅办理相关手续。\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;3.2 未经本公司同意并办理有关手续，客户将本协议的全部或部分内容转让给第三方的，对本公司不发生法律效力。\n</string>
    <string name="pay_protocol_name_4">四、 费用标准和费用交纳\n</string>
    <string name="pay_protocol_body_4">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;4.1 本公司按照依法确定的资费标准向客户收取费用，客户应按约定方式按时、足额支付各项费用。\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;4.2 客户接受服务所产生的各项费用由本公司获入网许可的计费系统记录，并作为双方资费结算的依据。除特殊约定外，客户按月支付费用，计费周期为一个月，后续按照自然月进行计费。\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;4.3 根据用户选择的业务种类，客户按预付费或后付费方式支付相关费用。费用以人民币进行结算。除特殊约定外，后付费方式下客户按月支付相关费用。预付费方式下客户需预存金额，当账户余额不足以支付客户拟使用业务的费用时，本公司将暂停提供业务服务，用户需及时缴费方可使用。\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;4.4 本公司可根据客户的消费情况约定其信用额度，并由本公司在客户办理报装手续时明示或另行告知，客户累计未付的相关费用达到或超出信用额度时，应及时通过现金缴纳或银行划扣分次结算的方式支付通信费用，否则本公司有权暂停服务。此外业务使用时如出现异常的巨额费用，即突然出现超过前三个月平均费用4倍以上的费用，本公司有权暂停服务。（暂停不受约定缴费期限的限制）\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;4.5 客户如选择或终止银行托收、银行代扣等方式支付费用时，需到银行等托收机构或我营业厅办理相应手续。并将视为本公司取得客户的合法授权，委托开户银行从客户登记的单位账户或个人银行结算账户(含卡类账户)内以自动转账方式支付客户在本公司消费的服务费用。\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;4.6 客户在缴费时限内未交纳费用的，本公司有权要求补交，并可以按照所欠费用每日加收3‰的违约金。\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;4.7 本公司有权通过委托人以电话联系、上门服务、媒体通告及法律诉讼等方式向客户追缴欠费及违约金。\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;4.8 客户在欠费情况下，应补交欠费和相应的违约金后方能办理其它业务。\n
    </string>
    <string name="pay_protocol_name_5">五、支付服务规则\n</string>
    <string name="pay_protocol_body_5">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;为有效保障您进行支付时的合法权益，您理解并同意接受以下规则：\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;5.1 一旦您使用本服务，您即授权本公司代理您在您及（或）您指定的人符合指定条件或状态时，支付相应的款项。\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;5.2 您在使用本服务过程中，本协议内容、网页上出现的关于交易操作的提示或本公司发送到该手机的信息（短信或电话等）内容是您使用本服务的相关规则，您使用本服务即表示您同意接受本服务的相关规则。您了解并同意本公司单方修改服务的相关规则，而无须征得您的同意，服务规则应以您使用服务时的页面提示（或发送到该手机的短信或电话等）为准，您同意并遵照服务规则是您使用本服务的前提。\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;5.3 本公司会以电子邮件（或发送到该手机的短信或电话等）方式通知您支付进展情况以及提示您进行下一步的操作，但本公司不保证您能够收到或者及时收到该邮件（或发送到该手机的短信或电话等），且不对此承担任何法律责任，因此，在交易过程中您应当及时登录到本网站查看和进行支付操作。因您没有及时查看和（或）未能提交相关申请而导致的任何纠纷或损失，本公司不负任何责任。\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;5.4 交易风险\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;① 在使用本服务时，若您或您的交易对方未遵从本服务条款或网站说明、交易页面中之操作提示、规则，则本公司有权拒绝为您或交易对方提供相关服务，且本公司不承担损害赔偿责任。\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;② 因您的过错导致的任何损失由您自行承担，该过错包括但不限于：不按照交易提示操作，未及时进行交易操作，遗忘或泄漏密码，密码被他人破解，您使用的计算机被他人侵入。\n
    </string>
    <string name="pay_protocol_name_6">六、隐私权保护\n</string>
    <string name="pay_protocol_body_6">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;6.1 银行账户信息\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;用户订购相关服务所使用的银行账户信息本公司将严格履行相关保密义务。\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;6.2交易行为\n
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;为了保障用户使用本服务的安全以及不断改进服务质量，本公司将记录并保存用户登录和使用本服务的相关信息，但本公司承诺不将此类信息提供给任何第三方（双方另有约定或法律法规另有规定的除外）。\n
    </string>
    <string name="pay_protocol_name_7">七、拒绝提供担保\n</string>
    <string name="pay_protocol_body_7">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;用户个人对网络服务的使用承担风险。本公司对此不作任何类型的担保，不论是明确的或隐含的，但是不对商业性的隐含担保、特定目的和不违反规定的适当担保作限制。如因互联网网络质量等原因对本公司的服务及时性、安全性和准确性造成影响，本公司不承担责任。\n</string>
    <string name="pay_protocol_name_8">八、有限责任\n</string>
    <string name="pay_protocol_body_8">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;任何因用户不正当使用网络服务、非法使用网络服务或用户传送的信息有变动等原因，导致的直接、间接、偶然、特殊及继起的损害，本公司不承担责任。\n</string>
    <string name="pay_protocol_name_9">九、终止服务\n</string>
    <string name="pay_protocol_body_9">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;本公司可随时根据实际情况终止一项或多项服务。本公司不需对任何个人或第三方负责。用户如对本公司的服务或协议条款有任何不满，可以停止使用本公司的网络服务。终止用户服务后，用户使用网络服务的权利立即终止。从终止日起，用户权利即终止，本公司也没有义务传送任何未处理的信息或未完成的服务给用户或第三方。\n</string>
    <string name="pay_protocol_name_10">十、通告传送\n</string>
    <string name="pay_protocol_body_10">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;所有发给用户的通告都可通过重要页面的公告或电子邮件或常规的信件传送。用户协议条款的修改、服务变更、或其它重要事件的通告均以此形式传送。\n</string>
    <string name="pay_protocol_name_11">十一、责任限制\n</string>
    <string name="pay_protocol_body_11">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;如因不可抗力或其他本公司无法控制的原因使本公司系统崩溃或无法正常使用导致网上交易无法完成或丢失有关的信息、记录等，本公司不承担责任。但是本公司会尽可能合理地协助处理善后事宜，并努力使客户免受经济损失。除了本公司的使用条件中规定的其它限制和除外情况之外，在中国法律法规所允许的限度内，对于因交易而引起的或与之有关的任何直接的、间接的、特殊的、附带的、后果性的或惩罚性的损害，或任何其它性质的损害，本公司、本公司的董事、管理人员、雇员、代理或其它代表在任何情况下都不承担责任。本公司的全部责任，不论是合同、保证、侵权(包括过失)项下的还是其它的责任，均不超过您所购买的与该索赔有关的商品价值额。\n</string>
    <string name="pay_protocol_name_12">十二、法律管辖和适用\n</string>
    <string name="pay_protocol_body_12">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;本协议的订立、执行和解释及争议的解决均应适用中国法律。如发生本公司服务条款与中国法律相抵触时，则这些条款将完全按法律规定重新解释，而其它合法条款则依旧保持对用户产生法律效力和影响。本协议的各项规定是可分割的，如本协议任何规定被裁定为无效或不可执行，该规定可被删除而其余条款应予以执行。如双方就本协议内容或其执行发生任何争议，双方应尽力友好协商解决；协商不成时，任何一方均可向本公司所在地的人民法院提起诉讼。\n</string>

    <string name="pay_protocol_name_13">我已阅读并同意以上协议\n</string>
</resources>
